Extensions Page: Show "Allow access to file URLs" setting for unpacked extensions.

By default, all unpacked extensions are granted file access. However, if the
extension did not request scriptable or host permissions for the same, we don't
show the "Allow access to file URLs" checkbox for the extension on the
chrome://extensions page.

This CL resolves this discrepancy by modifying the condition to show the file
access checkbox, to also take care of the unpacked extension case.

BUG=830112
TEST=Load an unpacked extension on chrome with no host or scripting permissions.
Open chrome://extensions. Ensure that "Allow access to file URLs" checkbox is
shown for the extension and is checked. Do this both for the old and the MD
Extensions page.

Change-Id: Idbb1deae88448f390576fb39ed18876314848f13
Reviewed-on: https://chromium-review.googlesource.com/1006196
Commit-Queue: Karan Bhatia <karandeepb@chromium.org>
Reviewed-by: Devlin <rdevlin.cronin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#550535}
Former-commit-id: f5989deec60645e6e58f7cccc2d93b4f4a2432c3